[Add] 外枠のhtml/cssの作成

--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <link rel ="stylesheet" href="style.css">
   </head>
   <body>
+    <header></header>
+
+    <main>
+      <div class="main-content">
+        <div class="main-container">
+          <img class="picture" src="">
+          <h3></h3>
+          <p></p>
+        </div>
+
+        <div class="main-container">
+          <img class="picture" src="">
+          <h3></h3>
+          <p></p>
+        </div>
+
+        <div class="main-container">
+          <img class="picture" src="">
+          <h3></h3>
+          <p></p>
+        </div>
+
+        <footer></footer>
+      </div>
+    </main>
 
   </body>
 </html>
