[Add] 写真・タイトル・本文の追加

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <main>
       <div class="main-content">
         <div class="main-container">
-          <img class="picture" src="">
-          <h3></h3>
-          <p></p>
+          <div class="picture1"></div>
+            <h3 class="title">タイトルが入ります</h3>
+            <p class="sentence">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
         </div>
 
         <div class="main-container">
-          <img class="picture" src="">
-          <h3></h3>
-          <p></p>
+          <div class="picture2"></div>
+            <h3 class="title">タイトルが入ります</h3>
+            <p class="sentence">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
         </div>
 
         <div class="main-container">
-          <img class="picture" src="">
-          <h3></h3>
-          <p></p>
+          <div class="picture3"></div>
+            <h3 class="title">タイトルが入ります</h3>
+            <p class="sentence">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
         </div>
 
         <footer></footer>
