--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset = "UTF-8">
-    <title>html1-8</title>
+    <title>html1-9</title>
     <link rel ="stylesheet" href="style.css">
   </head>
   <body>
@@ -11,26 +11,30 @@
     <main>
       <div class="main-content">
         <div class="main-container">
-          <div class="picture1"></div>
+          <div class="step">step1</div>
+          <div class="picture1">
+          </div>
             <h3 class="title">タイトルが入ります</h3>
             <p class="sentence">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
         </div>
 
         <div class="main-container">
-          <div class="picture2"></div>
+          <div class="step">step2</div>
+          <div class="picture2">
+          </div>
             <h3 class="title">タイトルが入ります</h3>
             <p class="sentence">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
         </div>
 
         <div class="main-container">
-          <div class="picture3"></div>
+          <div class="step">step3</div>
+          <div class="picture3">
+          </div>
             <h3 class="title">タイトルが入ります</h3>
             <p class="sentence">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
         </div>
-
-        <footer></footer>
       </div>
     </main>
-
+        <footer></footer>
   </body>
 </html>
